# rumbledome

./: .gitignore  CLAUDE.md  COMPREHENSIVE_PROJECT_REVIEW.md  Cargo.toml  DEVELOPMENT_STATUS.md  GOLD_BADGE_ACHIEVEMENT.md  LICENSE.md  README.md  REORGANIZATION_PLAN.md  SYSTEMATIC_ENGINEERING_QUICKSTART.md  TRACEABILITY_REGISTRY.md  build-status.md  build-test.md  comprehensive_audit.md  derivation-analysis.md  duplicate-analysis.md  final-duplicate.md  final-issue.md  final-status.md  project_assessment.sept6.txt   real-duplicates.md  status.md  temp_status.md  test-mockhal.rs  test-report.md
.cargo/: config.toml
.githooks/: pre-commit
.github/workflows/: ai-manifest.yml
crates/rumbledome-cli/: Cargo.toml
crates/rumbledome-cli/src/: backup_commands.rs  main.rs
crates/rumbledome-core/: Cargo.toml
crates/rumbledome-core/src/: calibration.rs  config.rs  control.rs  error.rs  learning.rs  lib.rs  safety.rs  state.rs
crates/rumbledome-fw/: Cargo.toml
crates/rumbledome-fw/src/: main.rs
crates/rumbledome-hal/: Cargo.toml
crates/rumbledome-hal/src/: error.rs  lib.rs  mock.rs  pwm.rs  sensor_fusion.rs  simple_mock.rs  time.rs  traits.rs  types.rs
crates/rumbledome-hal/src/teensy41/: analog.rs  bluetooth.rs  can.rs  display.rs  gpio.rs  mod.rs  pwm.rs  sdcard.rs  storage.rs  time.rs
crates/rumbledome-protocol/: Cargo.toml
crates/rumbledome-protocol/src/: error.rs  lib.rs  messages.rs
crates/rumbledome-sim/: Cargo.toml
crates/rumbledome-sim/src/: config.rs  engine_sim.rs  main.rs  scenarios.rs  ui.rs
docs/: AI_Collaborative_Engineering.md  AI_Philosophy.md  Architecture.md  BeyondRumbleDome.md  CAN_Signals.md  CalibrationAndDefaults.md  Context.md  DOCUMENTATION_INDEX.md  Definitions.md  DesignSpec.md  Hardware.md  Implementation.md  ImplementationSpec.md  Interfaces.md  LEGACY_PROJECT_ADOPTION.md  LearnedData.md  METHODOLOGY_TRANSFORMATION.md  MustNotDrop.md  Physics.md  Protocols.md  QUICKSTART_GUIDE.md  README.md  Requirements.md  SYSTEMATIC_ENGINEERING_PLATFORM.md  Safety.md  SimulationRequirements.md  SystematicEngineeringTool.md  TECHNICAL_IMPLEMENTATION.md  TRACEABILITY_PROCESS.md  TechnicalSpecs.md  TestPlan.md
kicad/: RumbleDome_Circuit_Architecture.md
kicad/mainboard/: mainboard.kicad_pro  mainboard.kicad_sch
tests/: storage_tests.rs
tools/: cli  cli.bak  example-flight-controller-config.json  flight-controller-demo.py  project-config.json  rumbledome-cli  systematic_engineering_core.py
