[package]
name = "rumbledome-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Core control logic for RumbleDome (hardware-independent)"

[dependencies]
rumbledome-hal = { path = "../rumbledome-hal" }
rumbledome-protocol = { path = "../rumbledome-protocol" }

serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
log.workspace = true
anyhow.workspace = true

[dev-dependencies]
rumbledome-hal = { path = "../rumbledome-hal", features = ["mock"] }