[package]
name = "rumbledome-fw"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "RumbleDome firmware for Teensy 4.1"

[[bin]]
name = "rumbledome-fw"
path = "src/main.rs"

[dependencies]
rumbledome-core = { path = "../rumbledome-core" }
rumbledome-hal = { path = "../rumbledome-hal", features = ["teensy41"] }

# Teensy 4.1 / i.MX RT1062 dependencies
cortex-m = "0.7"
cortex-m-rt = "0.7"
embedded-hal = "1.0"
nb = "1.0"

# Teensy 4.1 specific
teensy4-bsp = "0.4"
teensy4-panic = "0.2"
imxrt-hal = "0.5"
imxrt-ral = "0.5"

# Additional embedded dependencies
heapless = "0.8"
rtic = "2.0"
embedded-storage = "0.3"
embedded-can = "0.4"

# Utility crates
log = "0.4"
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

[features]
default = ["rt"]
rt = ["teensy4-bsp/rt", "cortex-m-rt"]

# Target configuration
[target.thumbv7em-none-eabihf]
runner = "probe-rs run --chip MIMXRT1062xxxxA --protocol swd"

[profile.dev]
debug = 2
opt-level = "s"

[profile.release]
debug = 2
lto = true
opt-level = "s"