[package]
name = "rumbledome-hal"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Hardware abstraction layer for RumbleDome"

[dependencies]
thiserror.workspace = true
log.workspace = true
serde.workspace = true

# Embedded HAL traits
embedded-hal = { workspace = true, optional = true }
nb.workspace = true

# Mock implementation dependencies
mockall = { workspace = true, optional = true }

# Teensy 4.1 dependencies (optional)
teensy4-bsp = { version = "0.4", optional = true }
cortex-m = { version = "0.7", optional = true }
heapless = { version = "0.8", optional = true }
embedded-graphics = { version = "0.8", optional = true }
serde_json = { version = "1.0", optional = true }

[features]
default = ["mock"]
teensy41 = ["embedded-hal", "teensy4-bsp", "cortex-m", "heapless", "embedded-graphics", "serde_json"]
mock = ["mockall"]
std = []