[package]
name = "rumbledome-sim"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Desktop simulator for RumbleDome development and testing"

[[bin]]
name = "rumbledome-sim"
path = "src/main.rs"

[dependencies]
rumbledome-core = { path = "../rumbledome-core" }
rumbledome-hal = { path = "../rumbledome-hal", features = ["mock"] }
rumbledome-protocol = { path = "../rumbledome-protocol" }

serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
clap.workspace = true
log.workspace = true
anyhow.workspace = true

# Additional simulation dependencies
rand = "0.8"
crossterm = "0.27"
ratatui = "0.24"